# TTLCacheNet-Model

./: .gitignore  Dockerfile  fork-of-ttlcachenet.ipynb  main.py  pyproject.toml
app/: artifacts_loader.py  csv_logger.py  feature_builder.py  model_api.py
artifacts/: encoder.keras  meta.json  reg_next.pkl
train/: train.py
